--- a/app-java/pom.xml
+++ b/app-java/pom.xml
@@ -43,11 +43,11 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
-        <!-- MySQL Connector (mise à jour pour corriger la vulnérabilité CVE-2023-22095) -->
+        <!-- MySQL Connector (mise à jour pour corriger les vulnérabilités CVE-2023-22095 et CVE-2023-21971) -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.34</version>
+            <version>8.2.0</version>
         </dependency>
 
         <!-- Spring Boot Starter Test -->
